--- a/src/config/foodlist-query.properties
+++ b/src/config/foodlist-query.properties
@@ -14,3 +14,5 @@ updatefood=UPDATE FOODLIST SET F_DATE=?, \
 							   F_SOUP=?, \
 							   F_MAINFOOD=? \
 							   WHERE F_NO=?	
+							   
+searchlist=SELECT*FROM FOODLIST WHERE F_DATE=?					   
