--- a/src/config/member-query.properties
+++ b/src/config/member-query.properties
@@ -10,7 +10,7 @@ memberUpdate=UPDATE EMPLOYEE SET PHONE_NO=? \
 								
 MemberAdd=INSERT INTO EMPLOYEE VALUES(SEQ_MNO.NEXTVAl,?,?,?,?,?,?,?,?,?,?,SYSDATE,NULL,?)
 
-MemberSalaryAdd=INSERT INTO SALARY VALUES(SEQ_SNO.NEXTVAl,NULL,NULL,0,0)
+MemberSalaryAdd=INSERT INTO SALARY VALUES((SELECT MAX(EMP_NO)FROM EMPLOYEE),NULL,NULL,0,0)
 
 memberList=SELECT * FROM( SELECT \
                   ROWNUM RNUM, \
@@ -54,10 +54,19 @@ adminMemberUpdate2=UPDATE EMPLOYEE SET EMP_NAME=?, \
 									  DEPT_NAME=?, \
 									  JOB_NAME=?, \
 									  ENT_DATE=NULL \
-									  WHERE EMP_NO=?									  
+									  WHERE EMP_NO=?							  
 
 adminMemberDelete=DELETE FROM EMPLOYEE WHERE EMP_NO=?
 
 listCount=SELECT COUNT(*) FROM EMPLOYEE
 #직원정보 부서별로 모두 불러오기
-selectAllList=SELECT * FROM EMPLOYEE ORDER BY DEPT_NAME								  
+selectAllList=SELECT * FROM EMPLOYEE ORDER BY DEPT_NAME
+
+#관리자 회원목록 검색(사원번호)
+adminSearchMemberNo=SELECT * FROM EMPLOYEE WHERE EMP_NO=?
+#관리자 회원목록 검색(사원명)
+adminSearchMemberName=SELECT * FROM EMPLOYEE WHERE EMP_NAME=?
+#관리자 회원목록 검색(부서)
+adminSearchDeptName=SELECT * FROM EMPLOYEE WHERE DEPT_NAME=?
+#관리자 회원목록 검색(직급)
+adminSearchJobName=SELECT * FROM EMPLOYEE WHERE JOB_NAME=?
