--- a/src/config/message-query.properties
+++ b/src/config/message-query.properties
@@ -1,2 +1,3 @@
 allmsglist=SELECT * FROM MESSAGE WHERE RECEIVE_EMP_NO = ?
 selectOne=SELECT * FROM MESSAGE WHERE MESSAGE_ID = ?
+sendmsg=INSERT INTO MESSAGE VALUES(SEQ_ID.NEXTVAL,?,?,?,?,?,?,SYSDATE,?)
